syntax = "proto3";

package trpc.elysia.llmtool.llm;
option go_package="github.com/yzf120/elysia-llm-tool/proto/llm";

// LLM服务定义
service LLMService {
  // 流式对话接口
  rpc StreamChat (StreamChatRequest) returns (stream StreamChatResponse) {}
  
  // 获取支持的模型列表
  rpc ListModels (ListModelsRequest) returns (ListModelsResponse) {}
}

// 消息内容部分
message ContentPart {
  string type = 1; // text, image_url
  string text = 2; // 文本内容
  ImageURL image_url = 3; // 图片URL
}

// 图片URL
message ImageURL {
  string url = 1;
  string detail = 2; // auto, low, high
}

// 对话消息
message ChatMessage {
  string role = 1; // system, user, assistant
  repeated ContentPart content = 2; // 支持多模态内容
}

// 流式对话请求
message StreamChatRequest {
  string model_id = 1; // 模型ID，如 "doubao-seed-1-6-lite-251015"
  repeated ChatMessage messages = 2; // 对话历史
  map<string, string> extra_params = 3; // 额外参数
}

// 流式对话响应
message StreamChatResponse {
  string id = 1; // 响应ID
  string model = 2; // 使用的模型
  int64 created = 3; // 创建时间戳
  repeated Choice choices = 4; // 选择列表
  Usage usage = 5; // token使用情况
  bool is_end = 6; // 是否结束
}

// 选择项
message Choice {
  int32 index = 1;
  Delta delta = 2; // 增量内容
  string finish_reason = 3; // stop, length, content_filter
}

// 增量内容
message Delta {
  string role = 1;
  string content = 2;
}

// Token使用情况
message Usage {
  int32 prompt_tokens = 1;
  int32 completion_tokens = 2;
  int32 total_tokens = 3;
}



// 获取模型列表请求
message ListModelsRequest {
  string provider = 1; // 可选：doubao, hunyuan, deepseek
}

// 获取模型列表响应
message ListModelsResponse {
  repeated ModelInfo models = 1;
}

// 模型信息
message ModelInfo {
  string model_id = 1; // 模型ID
  string model_name = 2; // 模型名称
  string provider = 3; // 提供商：doubao, hunyuan, deepseek
  string description = 4; // 描述
  bool support_stream = 5; // 是否支持流式
  bool support_vision = 6; // 是否支持视觉
}
